Fixed a vertical spacing issue at the top of the Home section

--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -83,5 +83,6 @@ $app-max-width: 1080px
 
 /*** Nav ***/
 
+$navbar-height: 43px
 $icon-hamburger-height: 36px
 $icon-hamburger-width: ($icon-hamburger-height / 3) * 4
