--- a/src/styles/content-sections.sass
+++ b/src/styles/content-sections.sass
@@ -3,6 +3,15 @@
 
 /*** Home ***/
 
+.nav-buffer
+  display: inline
+  visibility: hidden
+  height: 0
+  margin: 0
+  border: none
+  padding: 0
+  z-index: -1
+
 .home-section
   text-align: center
   .greeting
@@ -11,6 +20,7 @@
       font-weight: 400
       text-align: center
       margin: 0 0 0.8em
+      transition: margin 500ms linear
     .name
       font-size: 4rem
       font-weight: 600
@@ -33,12 +43,21 @@
     justify-content: center
     img
       height: 95%
-      border-radius: 1.5em
+      border-radius: 1em
   .highlights
     .highlight
       font-size: 1.4rem
       margin: 0
 
+@media (min-width: 500px)
+  .home-section
+    .nav-buffer
+      display: block
+      visibility: visible
+      height: $navbar-height
+    .greeting
+      .intro
+        margin-top: 0.8em
 
 /*** Experience ***/
 
