--- a/src/styles/navbar.sass
+++ b/src/styles/navbar.sass
@@ -3,13 +3,6 @@
 
 /*** Navigation ***/
 
-.nav-buffer
-  display: block
-  position: relative
-  top: -50px
-  height: 50px
-  z-index: -1
-
 .navbar
   position: inherit
   z-index: 100
@@ -39,13 +32,14 @@
   .mobile-hidden
     display: unset
   .content-container
-    padding-top: 50px
+    //padding-top: 50px
     background: $color-background
   .navbar
+    opacity: 1
     position: fixed
     width: 100%
     max-width: $app-max-width
-    margin: 0 0 1em
+    margin: 0
     border: 2px solid $color-nav
     .nav-hamburger
       display: none
